--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="/assets/img/Kanab_Shot.jpg" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="Kanab_Shot.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
