--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="/Girl_Studying.jpeg" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Girl_Studying.jpeg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -62,7 +62,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="/assets/img/Mountain Embarking.jpg" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Mountain Embarking.jpg" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
@@ -78,7 +78,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="/assets/img/Man_watching_investments.png" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Man_watching_investments.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
